fixed inital screen flash bang and fixed regression from vertical stretch breaking again

--- a/app/game/play/page.module.css
+++ b/app/game/play/page.module.css
@@ -1,22 +1,10 @@
-:global(body:has(.playPageRoot)) {
-  margin: 0;
-  padding: 0;
-}
-
-:global(body:has(.playPageRoot) .page-shell) {
-  display: flex;
-  flex-direction: column;
-  min-height: 100dvh;
-  width: 100%;
-  max-width: none;
-  min-width: 0;
-  margin: 0;
-  padding: 0;
-}
-
 .root {
   display: flex;
   flex-direction: column;
   flex: 1;
   min-height: 0;
+  width: 100dvw;
+  margin-left: calc(50% - 50dvw);
+  margin-right: calc(50% - 50dvw);
+  overflow-x: clip;
 }
